# services-dkfz

./: .gitignore  README.md
docs/: mainzelliste-guide.md  proxy-access-guide.md
pcp-dkfz-transfer/: QUICK_REFERENCE.md  README.md  install.sh  pcpdt  setup-shared-folders.sh  test-shared-folders.py  test.py  upload_itcc2dkfz.ipynb
resources/: cbioportal_etl_zero.py  fix_cbioportal.py  fix_zero2.py  merge_cbio.py  structure.txt  upload_itcc2dkfz.sh
resources/cbio_importer/: README.md  app.py  config.py  docker-compose.yml  models.py  pipeline.py  pyproject.toml
resources/cbio_importer/tasks/: db_check.py  docker_ops.py  etl.py  importer.py  validator.py  watcher.py
resources/cbio_qc/: README.md  fixers.py  itcc_qc.py  runner.py
