[project]
name = "cbio-importer"
version = "0.1.0"
description = "Automated cBioPortal study import pipeline"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.4",
    "pymysql>=1.1",
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
